k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dev-service
  namespace: jenkins
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: dev-service
